--- a/SubEthaEdit-Mac/SEEParticipantView.xib
+++ b/SubEthaEdit-Mac/SEEParticipantView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C44" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C48" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
@@ -48,7 +48,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                 </progressIndicator>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="laB-2b-86S" userLabel="Text Field - Participant Name">
-                    <rect key="frame" x="30" y="8" width="39" height="14"/>
+                    <rect key="frame" x="31" y="8" width="39" height="14"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Name" id="JUh-En-lK2">
                         <font key="font" metaFont="smallSystem"/>
@@ -62,12 +62,14 @@
                 <constraint firstAttribute="centerY" secondItem="hE6-nB-RDu" secondAttribute="centerY" constant="9" id="9g1-gp-gv4"/>
                 <constraint firstAttribute="height" constant="96" id="CTe-CY-L0P"/>
                 <constraint firstItem="hE6-nB-RDu" firstAttribute="centerX" secondItem="k1p-6D-syT" secondAttribute="centerX" id="DMG-H5-rAW"/>
-                <constraint firstAttribute="centerX" secondItem="laB-2b-86S" secondAttribute="centerX" id="GGy-df-UFa"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="laB-2b-86S" secondAttribute="trailing" constant="2" id="Tpl-No-JI8"/>
+                <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="laB-2b-86S" secondAttribute="trailing" constant="32" id="JBu-y8-Oyh"/>
+                <constraint firstAttribute="centerX" secondItem="laB-2b-86S" secondAttribute="centerX" id="SG5-MR-sI7"/>
                 <constraint firstItem="hE6-nB-RDu" firstAttribute="centerY" secondItem="k1p-6D-syT" secondAttribute="centerY" constant="-1" id="XBu-jo-auU"/>
-                <constraint firstItem="laB-2b-86S" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1" secondAttribute="leading" constant="2" id="f1R-GA-Ioi"/>
-                <constraint firstItem="laB-2b-86S" firstAttribute="top" secondItem="hE6-nB-RDu" secondAttribute="bottom" constant="7" id="vgD-Fe-TTq"/>
-                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="z2q-Sf-2xm"/>
+                <constraint firstItem="laB-2b-86S" firstAttribute="leading" relation="lessThanOrEqual" secondItem="1" secondAttribute="leading" constant="33" id="c2i-Jb-xjL"/>
+                <constraint firstItem="laB-2b-86S" firstAttribute="top" secondItem="hE6-nB-RDu" secondAttribute="bottom" constant="7" id="fDc-KA-DyE"/>
+                <constraint firstItem="laB-2b-86S" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1" secondAttribute="leading" constant="2" id="fWY-ha-tdE"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="laB-2b-86S" secondAttribute="trailing" constant="2" id="ukF-Tk-rCD"/>
+                <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="700" constant="100" id="z2q-Sf-2xm"/>
             </constraints>
             <animations>
                 <caTransition key="subviews">
