--- a/SubEthaEdit-Mac/German.lproj/AboutPanel.xib
+++ b/SubEthaEdit-Mac/German.lproj/AboutPanel.xib
@@ -18,15 +18,15 @@
         <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="48" userLabel="Panel" customClass="NSPanel">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="537" y="272" width="285" height="474"/>
+            <rect key="contentRect" x="537" y="272" width="285" height="429"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1178"/>
             <value key="minSize" type="size" width="213" height="107"/>
             <view key="contentView" id="47">
-                <rect key="frame" x="0.0" y="0.0" width="285" height="474"/>
+                <rect key="frame" x="0.0" y="0.0" width="285" height="429"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField verticalHuggingPriority="750" id="56">
-                        <rect key="frame" x="8" y="346" width="269" height="13"/>
+                        <rect key="frame" x="8" y="301" width="269" height="13"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Version" id="95">
                             <font key="font" metaFont="label"/>
@@ -35,8 +35,8 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="58">
-                        <rect key="frame" x="8" y="19" width="268" height="17"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                        <rect key="frame" x="52" y="10" width="181" height="27"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                         <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Copyright" id="96">
                             <font key="font" metaFont="label"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -44,17 +44,17 @@
                         </textFieldCell>
                     </textField>
                     <imageView id="59">
-                        <rect key="frame" x="110" y="402" width="64" height="64"/>
+                        <rect key="frame" x="110" y="357" width="64" height="64"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSApplicationIcon" id="97"/>
                     </imageView>
                     <imageView id="67">
-                        <rect key="frame" x="62" y="374" width="164" height="22"/>
+                        <rect key="frame" x="62" y="329" width="164" height="22"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" image="NamedLogo2" id="98"/>
                     </imageView>
                     <scrollView horizontalLineScroll="0.0" horizontalPageScroll="0.0" verticalLineScroll="0.0" verticalPageScroll="0.0" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" id="74">
-                        <rect key="frame" x="0.0" y="44" width="285" height="222"/>
+                        <rect key="frame" x="0.0" y="45" width="285" height="222"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="fIQ-F1-M0v">
                             <rect key="frame" x="1" y="1" width="283" height="220"/>
@@ -266,7 +266,7 @@ Pavel Brož</string>
                         </scroller>
                     </scrollView>
                     <textField verticalHuggingPriority="750" id="92">
-                        <rect key="frame" x="17" y="327" width="251" height="11"/>
+                        <rect key="frame" x="17" y="282" width="251" height="11"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="OgreKit/oniguruma Version" id="102">
                             <font key="font" metaFont="miniSystem"/>
