--- a/SubEthaEdit-Mac/English.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/English.lproj/PlainTextEditor.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C44" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C48" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
@@ -92,8 +92,8 @@
                         <button id="cPs-Ka-upO">
                             <rect key="frame" x="392" y="0.0" width="17" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="SplitOpen" imagePosition="only" alignment="center" alternateImage="SplitClose" transparent="YES" imageScaling="proportionallyDown" inset="2" id="wd5-GI-xyx">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="EditorAddSplit" imagePosition="only" alignment="center" alternateImage="EditorRemoveSplit" transparent="YES" imageScaling="proportionallyDown" inset="2" id="wd5-GI-xyx">
+                                <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
                                 <font key="font" metaFont="system"/>
                             </buttonCell>
                             <connections>
@@ -107,19 +107,13 @@
                                 <real key="inputBrightness" value="0.0"/>
                                 <real key="inputContrast" value="1"/>
                                 <null key="inputImage"/>
-                                <real key="inputSaturation" value="2"/>
+                                <real key="inputSaturation" value="4"/>
                             </configuration>
                         </ciFilter>
                         <ciFilter name="CIGaussianBlur">
                             <configuration>
                                 <null key="inputImage"/>
                                 <real key="inputRadius" value="2"/>
-                            </configuration>
-                        </ciFilter>
-                        <ciFilter name="CIExposureAdjust">
-                            <configuration>
-                                <real key="inputEV" value="-0.5"/>
-                                <null key="inputImage"/>
                             </configuration>
                         </ciFilter>
                     </backgroundFilters>
@@ -213,12 +207,6 @@
                                 <real key="inputSaturation" value="4"/>
                             </configuration>
                         </ciFilter>
-                        <ciFilter name="CIExposureAdjust">
-                            <configuration>
-                                <real key="inputEV" value="-0.5"/>
-                                <null key="inputImage"/>
-                            </configuration>
-                        </ciFilter>
                     </backgroundFilters>
                 </customView>
             </subviews>
@@ -251,8 +239,8 @@
         <image name="BottomBarSharingIconAnnounce" width="15" height="11"/>
         <image name="BottomBarSharingIconAnnounce_Inactive" width="15" height="11"/>
         <image name="BottomBarSharingIconGroup" width="16" height="11"/>
-        <image name="SplitClose" width="15" height="15"/>
-        <image name="SplitOpen" width="15" height="15"/>
+        <image name="EditorAddSplit" width="10" height="12"/>
+        <image name="EditorRemoveSplit" width="10" height="12"/>
         <image name="WaitPipe" width="13" height="12"/>
     </resources>
 </document>
