--- a/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C44" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C48" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
@@ -86,8 +86,8 @@
                         <button id="Vf8-MP-UD0">
                             <rect key="frame" x="392" y="0.0" width="17" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="SplitOpen" imagePosition="only" alignment="center" alternateImage="SplitClose" transparent="YES" imageScaling="proportionallyDown" inset="2" id="DlZ-2M-ymd">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="EditorAddSplit" imagePosition="only" alignment="center" alternateImage="EditorRemoveSplit" transparent="YES" imageScaling="proportionallyDown" inset="2" id="DlZ-2M-ymd">
+                                <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
                                 <font key="font" metaFont="system"/>
                             </buttonCell>
                         </button>
@@ -109,13 +109,7 @@
                                 <real key="inputBrightness" value="0.0"/>
                                 <real key="inputContrast" value="1"/>
                                 <null key="inputImage"/>
-                                <real key="inputSaturation" value="2"/>
-                            </configuration>
-                        </ciFilter>
-                        <ciFilter name="CIExposureAdjust">
-                            <configuration>
-                                <real key="inputEV" value="0.5"/>
-                                <null key="inputImage"/>
+                                <real key="inputSaturation" value="4"/>
                             </configuration>
                         </ciFilter>
                     </backgroundFilters>
@@ -206,13 +200,7 @@
                                 <real key="inputBrightness" value="0.0"/>
                                 <real key="inputContrast" value="1"/>
                                 <null key="inputImage"/>
-                                <real key="inputSaturation" value="2"/>
-                            </configuration>
-                        </ciFilter>
-                        <ciFilter name="CIExposureAdjust">
-                            <configuration>
-                                <real key="inputEV" value="0.5"/>
-                                <null key="inputImage"/>
+                                <real key="inputSaturation" value="4"/>
                             </configuration>
                         </ciFilter>
                     </backgroundFilters>
@@ -247,8 +235,8 @@
         <image name="BottomBarSharingIconAnnounce" width="15" height="11"/>
         <image name="BottomBarSharingIconAnnounce_Inactive" width="15" height="11"/>
         <image name="BottomBarSharingIconGroup" width="16" height="11"/>
-        <image name="SplitClose" width="15" height="15"/>
-        <image name="SplitOpen" width="15" height="15"/>
+        <image name="EditorAddSplit" width="10" height="12"/>
+        <image name="EditorRemoveSplit" width="10" height="12"/>
         <image name="WaitPipe" width="13" height="12"/>
     </resources>
 </document>
