--- a/SubEthaEdit-Mac/SEEParticipantView.xib
+++ b/SubEthaEdit-Mac/SEEParticipantView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C48" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
@@ -26,11 +26,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView autoresizesSubviews="NO" wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1" userLabel="Participant">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="96"/>
+            <rect key="frame" x="0.0" y="0.0" width="96" height="96"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="hE6-nB-RDu">
-                    <rect key="frame" x="22" y="29" width="56" height="56"/>
+                    <rect key="frame" x="20" y="29" width="56" height="56"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="56" id="7su-4l-9Tp"/>
@@ -42,11 +42,11 @@
                     </buttonCell>
                 </button>
                 <progressIndicator horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" displayedWhenStopped="NO" bezeled="NO" indeterminate="YES" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="k1p-6D-syT">
-                    <rect key="frame" x="34" y="40" width="32" height="32"/>
+                    <rect key="frame" x="32" y="40" width="32" height="32"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                 </progressIndicator>
                 <textField hidden="YES" wantsLayer="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="i14-Tb-TdJ">
-                    <rect key="frame" x="36" y="33" width="29" height="48"/>
+                    <rect key="frame" x="34" y="33" width="29" height="48"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <shadow key="shadow" blurRadius="3">
                         <size key="offset" width="1" height="1"/>
@@ -57,8 +57,8 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="laB-2b-86S" userLabel="Text Field - Participant Name">
-                    <rect key="frame" x="31" y="8" width="39" height="14"/>
+                <textField horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="laB-2b-86S" userLabel="Text Field - Participant Name">
+                    <rect key="frame" x="29" y="8" width="39" height="14"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Name" id="JUh-En-lK2">
                         <font key="font" metaFont="smallSystem"/>
@@ -73,14 +73,13 @@
                 <constraint firstItem="hE6-nB-RDu" firstAttribute="centerY" secondItem="i14-Tb-TdJ" secondAttribute="centerY" id="BeS-c5-vn6"/>
                 <constraint firstAttribute="height" constant="96" id="CTe-CY-L0P"/>
                 <constraint firstItem="hE6-nB-RDu" firstAttribute="centerX" secondItem="k1p-6D-syT" secondAttribute="centerX" id="DMG-H5-rAW"/>
-                <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="laB-2b-86S" secondAttribute="trailing" constant="32" id="JBu-y8-Oyh"/>
+                <constraint firstAttribute="width" secondItem="hE6-nB-RDu" secondAttribute="width" priority="501" constant="44" id="KND-Ve-MSI"/>
+                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="96" id="LnQ-VY-TNr"/>
                 <constraint firstAttribute="centerX" secondItem="laB-2b-86S" secondAttribute="centerX" id="SG5-MR-sI7"/>
                 <constraint firstItem="hE6-nB-RDu" firstAttribute="centerY" secondItem="k1p-6D-syT" secondAttribute="centerY" constant="-1" id="XBu-jo-auU"/>
-                <constraint firstItem="laB-2b-86S" firstAttribute="leading" relation="lessThanOrEqual" secondItem="1" secondAttribute="leading" constant="33" id="c2i-Jb-xjL"/>
                 <constraint firstItem="hE6-nB-RDu" firstAttribute="centerX" secondItem="i14-Tb-TdJ" secondAttribute="centerX" id="cZw-Ty-KOG"/>
                 <constraint firstItem="laB-2b-86S" firstAttribute="top" secondItem="hE6-nB-RDu" secondAttribute="bottom" constant="7" id="fDc-KA-DyE"/>
-                <constraint firstItem="laB-2b-86S" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1" secondAttribute="leading" constant="2" id="fWY-ha-tdE"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="laB-2b-86S" secondAttribute="trailing" constant="2" id="ukF-Tk-rCD"/>
+                <constraint firstAttribute="width" secondItem="laB-2b-86S" secondAttribute="width" priority="501" constant="10" id="m4y-y8-bvP"/>
             </constraints>
             <animations>
                 <caTransition key="subviews">
