--- a/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C48" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C53" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
@@ -47,7 +47,7 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </customView>
-                <customView autoresizesSubviews="NO" id="27" userLabel="Top Blurred View">
+                <customView autoresizesSubviews="NO" id="27" userLabel="Top Blurred View" customClass="SEEOverlayView">
                     <rect key="frame" x="0.0" y="273" width="409" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
@@ -114,7 +114,7 @@
                         </ciFilter>
                     </backgroundFilters>
                 </customView>
-                <customView autoresizesSubviews="NO" id="28" userLabel="Bottom Blurred View">
+                <customView autoresizesSubviews="NO" id="28" userLabel="Bottom Blurred View" customClass="SEEOverlayView">
                     <rect key="frame" x="0.0" y="0.0" width="409" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
